fix(carte): align empty and filled tiles

--- a/src/app/components/carte/carte.component.sass
+++ b/src/app/components/carte/carte.component.sass
@@ -8,6 +8,7 @@
 	height: 100px
 	background-color: lightgreen
 	border: 1px solid black
+	vertical-align: top
 
 	&.highlight
 		background-color: darken(lightgreen, 10%)
